<resources>
    <string name="app_name">DayOffApp</string>
    <string name="image_view">image view</string>
    <string name="log_in">Log In</string>
    <string name="login_desc">Please Sign In to continue</string>
    <string name="useremail">user123@gmail.com</string>
    <string name="userpass">Abcd123/</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signupbutton">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="text_login">Login</string>
    <string name="text_login_ins">Please Sign In to continue</string>
    <string name="email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_login_button">LOGIN</string>
    <string name="text_account">Don’t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="text_ins_signup">Please fill the input below here</string>
    <string name="back">Back</string>
    <string name="fullname">Fullname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="text_already">Already have an account?</string>
    <string name="error_text">Not empty</string>
    <string name="error_pass">Password Mismatch</string>
    <string name="text_user">Users</string>
    <string name="error_register">Register Failed</string>
    <string name="please_fill_the_input_below_here">Please fill the input below here</string>
    <string name="floating_button">Floating Button</string>
    <string name="content">Content</string>
    <string name="_imgbtn">imagebutton</string>
    <string name="dipsy">Dipsy</string>
    <string name="emaildipsy">Dipsycakep@gmail.com</string>
    <string name="preference">Preference</string>
    <string name="_darkmode">Dark mode</string>
    <string name="_notification">Notifications</string>
    <string name="account">Account</string>
    <string name="_edit_acc">Edit Account</string>
    <string name="_change">Change Account</string>
    <string name="language">Language</string>
    <string name="_bookmark">Bookmark</string>
    <string name="settings">Settings</string>
    <string name="privacy_and_settings">Privacy and settings</string>
    <string name="logout">Logout</string>
    <string name="_18_march_2021">18 March 2021</string>
    <string name="movie_of_the_week">Movie of the week</string>
    <string name="january_15_2021">January 15, 2021</string>
    <string name="all">All</string>
    <string name="animarion">Animarion</string>
    <string name="horror">Horor</string>
    <string name="comedy">Comedy</string>
    <string name="animation">Animation</string>
    <string name="thriller">Thriller</string>
</resources>