<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main2"
    tools:context=".activities.ProfileActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/iv_back_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/main2"
            android:contentDescription="@string/_imgbtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/dipsy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_back_profile" />

        <TextView
            android:id="@+id/tv_name_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/dipsy"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp"
            android:fontFamily="@font/playfair_display"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_profile"
            app:layout_constraintTop_toTopOf="@+id/iv_profile" />

        <TextView
            android:id="@+id/tv_email_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/emaildipsy"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_profile"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_profile"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_preference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/preference"
            android:textColor="@color/purple_200"
            android:fontFamily="monospace"
            android:textSize="@dimen/_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

        <ImageButton
            android:id="@+id/ib_dark_mode_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_img_button"
            android:contentDescription="@string/_imgbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_preference"
            app:srcCompat="@drawable/ic_night" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_darkmode"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            android:layout_marginStart="@dimen/_8dp"
            app:layout_constraintBottom_toBottomOf="@+id/ib_dark_mode_profile"
            app:layout_constraintStart_toEndOf="@id/ib_dark_mode_profile"
            app:layout_constraintTop_toTopOf="@id/ib_dark_mode_profile"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sw_dark_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            />

        <ImageButton
            android:id="@+id/ib_notification_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_img_button"
            android:contentDescription="@string/_imgbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_dark_mode_profile"
            app:srcCompat="@drawable/ic_notification" />

        <TextView
            android:id="@+id/tv_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_notification"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            app:layout_constraintBottom_toBottomOf="@+id/ib_notification_profile"
            app:layout_constraintStart_toEndOf="@+id/ib_notification_profile"
            app:layout_constraintTop_toTopOf="@+id/ib_notification_profile" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sw_notification_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_notification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_notification"
            />

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/account"
            android:textColor="@color/purple_200"
            android:fontFamily="monospace"
            android:textSize="@dimen/_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_notification_profile" />

        <ImageButton
            android:id="@+id/ib_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_img_button"
            android:contentDescription="@string/_imgbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_account"
            app:srcCompat="@drawable/ic_edit" />

        <TextView
            android:id="@+id/tv_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_edit_acc"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/ib_edit_profile"
            app:layout_constraintStart_toEndOf="@+id/ib_edit_profile"
            app:layout_constraintTop_toTopOf="@+id/ib_edit_profile" />

        <ImageButton
            android:id="@+id/ib_edit_account_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@color/main2"
            app:layout_constraintBottom_toBottomOf="@+id/tv_edit_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_edit_profile"
            app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            android:contentDescription="@string/_imgbtn" />

        <ImageButton
            android:id="@+id/ib_change_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_img_button"
            android:contentDescription="@string/_imgbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_edit_profile"
            app:srcCompat="@drawable/ic_twoacc" />

        <TextView
            android:id="@+id/tv_change_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_change"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/ib_change_account"
            app:layout_constraintStart_toEndOf="@+id/ib_change_account"
            app:layout_constraintTop_toTopOf="@+id/ib_change_account" />

        <ImageButton
            android:id="@+id/ib_forward_change_account_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@color/main2"
            app:layout_constraintBottom_toBottomOf="@+id/tv_change_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_change_account"
            app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            android:contentDescription="@string/_imgbtn" />

        <ImageButton
            android:id="@+id/ib_language_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_img_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_change_account"
            app:srcCompat="@drawable/ic_language"
            android:contentDescription="@string/_imgbtn" />

        <TextView
            android:id="@+id/tv_language_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/language"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/ib_language_profile"
            app:layout_constraintStart_toEndOf="@+id/ib_language_profile"
            app:layout_constraintTop_toTopOf="@+id/ib_language_profile" />

        <ImageButton
            android:id="@+id/ib_forward_language_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16dp"
            android:background="@color/main2"
            app:layout_constraintBottom_toBottomOf="@+id/tv_language_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_language_profile"
            app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            android:contentDescription="@string/_imgbtn" />

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_img_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_language_profile"
            app:srcCompat="@drawable/ic_bookmark"
            android:contentDescription="@string/_imgbtn" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:text="@string/_bookmark"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton9"
            app:layout_constraintStart_toEndOf="@+id/imageButton9"
            app:layout_constraintTop_toTopOf="@+id/imageButton9" />

        <ImageButton
            android:id="@+id/ib_forward_bookmark_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16dp"
            android:background="@color/main2"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            android:contentDescription="@string/_imgbtn" />

        <TextView
            android:id="@+id/tv_settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/settings"
            android:textColor="@color/purple_200"
            android:fontFamily="monospace"
            android:textSize="@dimen/_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton9" />

        <ImageButton
            android:id="@+id/ib_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_img_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_settings_title"
            app:srcCompat="@drawable/ic_settings"
            android:contentDescription="@string/_imgbtn" />

        <TextView
            android:id="@+id/tv_settings_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:text="@string/privacy_and_settings"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/ib_settings"
            app:layout_constraintStart_toEndOf="@+id/ib_settings"
            app:layout_constraintTop_toTopOf="@+id/ib_settings" />

        <ImageButton
            android:id="@+id/ib_forward_settings_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@color/main2"
            app:layout_constraintBottom_toBottomOf="@+id/tv_settings_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_settings_profile"
            app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            android:contentDescription="@string/_imgbtn" />

        <ImageButton
            android:id="@+id/ib_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_img_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_settings"
            app:srcCompat="@drawable/ic_logout"
            android:contentDescription="@string/_imgbtn" />
        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/logout"
            android:textColor="#E55F51"
            app:layout_constraintBottom_toBottomOf="@+id/ib_logout"
            app:layout_constraintStart_toEndOf="@+id/ib_logout"
            app:layout_constraintTop_toTopOf="@+id/ib_logout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>